[package]
authors = ["Drew Stone <drew@commonwealth.im>"]
name = "edge_bridge"
version = "0.1.0"

[dependencies]
hex-literal = "0.1.1"

[dependencies.parity-codec]
default-features = false
version = "2.1.5"

[dependencies.parity-codec-derive]
default-features = false
version = "2.1.0"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
default-features = false
version = "1.0.80"

[dependencies.serde_derive]
optional = true
version = "1.0.80"

[dependencies.sr-io]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.sr-std]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-balances]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-council]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-democracy]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-session]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-support]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-system]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-consensus]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.srml-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.substrate-keyring]
git = "https://github.com/paritytech/substrate/"
optional = true

[dependencies.substrate-primitives]
default-features = false
git = "https://github.com/paritytech/substrate/"

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-timestamp/std",
    "srml-consensus/std",
]
